<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aneesh.todolist.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FF1010"
        android:id="@+id/heading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="17sp"
        android:layout_marginTop="5sp"
        android:textColor="#0da51f" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_title"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/task_title_hint"
        android:textColor="#FF1010" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task_description"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/task_description_hint"
        android:textColor="#1010FF" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:text="@string/add_button"
        android:id="@+id/add_button"
        android:layout_gravity="right"
        android:gravity="center"
        android:onClick="addItem"
        android:padding="18sp" />

</LinearLayout>
